--- a/GLOBAL/global.css
+++ b/GLOBAL/global.css
@@ -1,68 +1,36 @@
 /* Document */
 
-/*
-@font-face {
-    font-family: 'neo_eulermedium';
-    src: url('../_Fonts/euler-webfont.eot');
-    src: url('../_Fonts/euler-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../_Fonts/euler-webfont.woff') format('woff'),
-         url('../_Fonts/euler-webfont.ttf') format('truetype'),
-         url('../_Fonts/euler-webfont.svg#neo_eulermedium') format('svg');
-    font-weight: normal;
-    font-style: normal;
-}
-*/
-
-img {
-	border-style:none;
-	}
-
 body {
-	font-family: "Times New Roman", Times, serif; 
-	font-size: 15.5px;
+	font-size: 16px;
 	line-height: 18px;
-	text-align: left;
-	margin:20px;
-	color:#FFF;
+	color: #FFF;
 	background: #000;
 	}
 
 a:link {	
-	color: #FC0; 
+	color: #F00; 
 	text-decoration: none; 
 	}
 
 a:visited {
-	color: #FC0; 
-	text-decoration: none; 
+	color: #F00; 
 	}
 
 a:hover {
 	color: #000; 
-	text-decoration: none; 
 	}
 	
 a:active { 
 	color: #FFF; 
-	text-decoration: none; 	
 	}
 
-a.tooltip span {
-	display:none; 
-	padding:2px; 
-	margin-left:8px; 
-	width:300px;
+
+/* Fonts */
+
+.times {
+	font-family: "Times New Roman", Times, serif; 
 	}
 
-a.tooltip:hover span{
-	display:inline; 
-	position:absolute; 
-	/* background:transparent; */
-	background:#FFF;
-	border:1px solid #CCC;
-	color:#000;
-	}
-	
 .helvetica {
 	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; 
 	}
@@ -72,34 +40,21 @@ a.tooltip:hover span{
         }
 
 .big {
-        font-size: 36px;
-        line-height: 36px;
+        font-size: 26px;
+        line-height: 26px;
         }
 
 
 /* Containers */
 
-.navContainer {
+.nameContainer {
 	position: fixed;
+	width: 97%;
 	top: 0px;
-	left: 40px;
-	z-index: 90;
-	}
-
-.mainContainer {
-	top: 120px;
-	width: 99%;
-	z-index: 50;
-	text-align: center;
+	left: 20px;
+	z-index:99;
 	}
 	
-.bodyContainer {
-	top: 0px;
-	left: 25%;
-	width: 50%;
-	z-index: 10;
-	}	
-
 .topleftContainer {
 	position: absolute;
 	top: 0px;
@@ -131,98 +86,28 @@ a.tooltip:hover span{
 	width: 50%;
 	height: 50%;
 	}	
-
-/* these are currently unused */
-
-.blankContainer {
-	float: left;
-	width: 300px;
-	height: 200px;
-	}
-	
-.thumbsContainer {
-	float: right;
-	}
-
-.imageContainer {
-	text-align: center;
-	background-color:#FFF;
-	}
-
-.captionContainer {
-	width: 100%;
-	text-align: center;
-	padding: 5px 0 0 0;
-	}		
-	
-.captionContainer:hover { 
-	}
 		
+.innerContainer {
+	position: absolute;
+	width: 300px;
+	left: 50%;
+	top: 50%;
+	margin-top:-150px;
+	margin-left:-150px;
+	}
+
 .timeContainer {
 	position: absolute;
-	left: 0px;
 	text-align: left;
-	padding-top: 10px;
-	padding-bottom: 10px;
 	}
 
 .timeContainerWrapper {
 	position: absolute;
-	top: 50%;
-	left: 0px;
-	width: 500px;
-	margin: 0 0 0 0px;
-	z-index: 90;
+	width: 300px;
 	}
 	
-.clockContainer {
-	position: fixed;
-	top: 50%; 
-	left: 50%;
-	width: 200px;
-	height: 200px; 
-	margin: -100px 0 0 -100px;
-	z-index: 90;
-	}	
 	
-
-	
-/* Type */
-
-.caption {
-	font-size: 11px;
-	line-height: 12px; 
-	}
-	
-.body {
-	font-size: 18px;
-	line-height: 20px; 
-	}
-
-.detail {
-	font-size: 16px;
-	line-height: 18px; 
-	}
-
-.issue1:hover {
-	color:#00E;
-	}
-
-
-
-/* Utility */
-
-.pad {
-	padding: 30px;
-	}
-
-.hidden {
-	visibility:hidden;
-	}
-
-.clear {
-	clear:both;
-	}
+/* Navigation */
 
 .active {
 	margin-left: -40px;
@@ -255,53 +140,18 @@ a.tooltip:hover span{
 .static a:active {
 	color:#FFF;
 	}
-	
-.red {
-	color: #F00; 
+
+
+/* Utility */
+
+.green{
+	color:#0C0;
 	}
 
-.black {
-	color: #000; 
-	}
-
-.black a {
-	color: #000; 
-	}
-	
-.black a:hover {
-	color: #FC0; 
-	}
-	
-.black a:active {
-	color: #FFF; 
-	}
-
-.green {
-	color: #0B0; 
-	}
-	
 .green a {
-	color: #0B0; 
+	color:#0C0;
 	}
-	
-.green a:visited {
-	color: #0B0; 
+
+.yellow {
+	color:#CC0;
 	}
-	
-.green a:hover {
-	color: #000; 
-	}
-	
-.green a:active {
-	color: #FFF; 
-	}
-	
-.arrow a { 
-	background-image:url('/MEDIA/arrow.gif');
-	background-repeat:no-repeat;
-	padding: 0 0 0 16px;
-	}
-	
-	
-	
-	
