Comic Sans font

--- a/GLOBAL/global.css
+++ b/GLOBAL/global.css
@@ -31,6 +31,10 @@ a:active {
 	font-family: "Times New Roman", Times, serif; 
 	}
 
+.comicsans {
+	font-family: "Comic Sans", "Comic Sans MS", cursive;
+	}
+
 .helvetica {
 	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; 
 	}
