--- a/GLOBAL/global.css
+++ b/GLOBAL/global.css
@@ -3,8 +3,8 @@
 body {
 	font-size: 16px;
 	line-height: 18px;
-	color: #FFF;
-	background: #000;
+	color: #000;
+	background: #FFF;
 	}
 
 a:link {	
@@ -33,6 +33,10 @@ a:active {
 
 .comicsans {
 	font-family: "Comic Sans", "Comic Sans MS", cursive;
+	}
+
+.tahoma {
+	font-family: "Tahoma", Geneva, sans-serif;
 	}
 
 .helvetica {
