--- a/GLOBAL/global.css
+++ b/GLOBAL/global.css
@@ -2,18 +2,18 @@
 
 body {
 	font-size: 16px;
-	line-height: 18px;
+	line-height: 20px;
 	color: #000;
 	background: #FFF;
 	}
 
 a:link {	
-	color: #F00; 
+	color: #00F; 
 	text-decoration: none; 
 	}
 
 a:visited {
-	color: #F00; 
+	color: #00F; 
 	}
 
 a:hover {
@@ -64,11 +64,39 @@ a:active {
 
 .arabicContainer {
 	position: fixed;
-	top: 10px;
+	top: 20px;
 	right: 20px;
 	z-index:99;
 	}
+
+.englishMenuContainer {
+	position: fixed;
+	top: 42px;
+	left: 20px;
+	z-index: 99;
+	}
+
+.arabicMenuContainer {
+	position: fixed;
+	top: 42px;
+	right: 20px;
+	z-index: 99;
+	}
 	
+.leftContainer {
+	position: absolute;
+	top: 80px;
+	left: 20px;
+	width: 50%;
+	}	
+
+.rightContainer {
+	position: absolute;
+	top: 80px;
+	right: 20px;
+	width: 50%;
+	}	
+
 .middleContainer {
 	position: absolute;
 	top: 50%;
@@ -96,7 +124,7 @@ a:active {
 	}	
 
 .bottomleftContainer {
-	position: absolute;
+	position: fixed;
 	top: 50%;
 	left: 0px;
 	width: 50%;
@@ -104,7 +132,7 @@ a:active {
 	}	
 
 .bottomrightContainer {
-	position: absolute;
+	position: fixed;
 	top: 50%;
 	left: 50%;
 	width: 50%;
@@ -126,11 +154,20 @@ a:active {
 .timeContainer {
 	position: absolute;
 	text-align: left;
+	height: 36px;
+	/* background-color: #FFF; */
 	}
 
 .timeContainerWrapper {
 	position: absolute;
 	width: 300px;
+	}
+
+.imageContainer {
+	padding-top: 100px;
+	padding-right: 100px;
+	padding-bottom: 100px;
+	padding-left: 140px;
 	}
 	
 	
@@ -141,11 +178,11 @@ a:active {
 	}
 
 .active a {
-	color:#FC0;
+	color:#000;
 	}
 
 .active a:hover {
-	color:#000;
+	color:#FC0;
 	}
 
 .active a:active {
@@ -157,11 +194,11 @@ a:active {
 	}
 	
 .static a {
-	color:#000;
+	color:#FC0;
 	}
 
 .static a:hover {
-	color:#FC0;
+	color:#000;
 	}
 
 .static a:active {
