fix planetrarium, add Trailer.gif

--- a/GLOBAL/global.css
+++ b/GLOBAL/global.css
@@ -193,6 +193,14 @@ a:active {
 	bottom: 10px;
 	}	
 
+.planetariumContainer {
+	position: fixed;
+	right: 176px;
+	bottom: 126px;
+	z-index: 99;
+	/*width: 200px;*/
+	}	
+
 .innerContainerCenteredEnglish {
 	position: absolute;
 	left:35%;
