--- a/GLOBAL/global.css
+++ b/GLOBAL/global.css
@@ -80,6 +80,23 @@ a:active {
         }
 
 
+/* id */
+
+#mainScroll {
+	height:90%;
+	}
+
+#textScroll {
+	height:100%; 
+	overflow:auto;
+	}
+
+#imageScroll {
+	height:100%; 
+	overflow:auto;
+	}
+
+
 /* Containers */
 
 .englishContainer {
